# beginning-practical-haskell

./: .gitignore  .gitmodules  .pansite.yaml  INDEX.md  Makefile  NOTES.md  README.md  addenda.md  chars.md  index.html  index.md  make-doc.cmd  make.cmd  my.latex  part01.html  part01.md  part01a.md  part02.html  part02.md  part03.html  part03.md  part04.html  part04.md  part05.html  part05.md  part06.html  part06.md  q-and-a.html  q-and-a.md  server  under_development.html  under_development.md  update
child-health-data/: .gitignore  LICENSE  README.md  Setup.hs  child-health-data-app.cmd  child-health-data.cabal  requirements.txt  scrape.py  stack.yaml
child-health-data/.cache/: _3147_-1  _3147_555  _3147_556  _3147_559  _3147_560  _3147_561  _3147_563  _3148_-1  _3148_555  _3148_556  _3148_559  _3148_560  _3148_561  _3148_563  _3149_-1  _3149_555  _3149_556  _3149_559  _3149_560  _3149_561  _3149_563  _3150_-1  _3150_555  _3150_556  _3150_560  _3150_561  _3150_563  _3151_-1  _3151_555  _3151_556  _3151_560  _3151_561  _3152_-1  _3152_555  _3152_556  _3153_-1  _3153_555  _3153_556  _3153_559  _3153_560  (+260 more)
child-health-data/data/: ggs.txt  qqs.txt
child-health-data/lib/ChildHealthData/: CSV.hs  HTML.hs  ResponseCache.hs  Scrape.hs  Table.hs  TextUtil.hs  Types.hs  Util.hs
child-health-data/scrapelib/: util.py
child-health-data/script/: env.cmd  env.ps1  exec.sh  get-icu-bin-path.sh  post-build  watch.cmd
child-health-data/src/: Main.hs
child-health-data/test/: Main.hs
css/: buttondown.css
js/: main.js
part01/: HelloWorld.hs  stack.yaml
resources/: buttondown.css  footer.html  header.html  main.js  nav.html
scratch/: LICENSE  Main.hs  scratch.cabal
script/: grip  server  update
templates/: footer.html  nav.html
