name:                 child-health-data
version:              0.1.0.0
synopsis:             Web scraping demo project for Beginning Practical Haskell course
description:          Please see README.md
homepage:             https://github.com/rcook/beginning-practical-haskell/tree/master/child-health-data#readme
license:              MIT
license-file:         LICENSE
author:               Richard Cook
maintainer:           rcook@rcook.org
copyright:            2016-2017 Richard Cook
category:             Web
build-type:           Simple
cabal-version:        >= 1.10
data-dir:             data
data-files:           ggs.txt qqs.txt

source-repository head
  type:               git
  location:           https://github.com/rcook/beginning-practical-haskell.git

library
  hs-source-dirs:     lib
  default-language:   Haskell2010
  exposed-modules:    ChildHealthData.CSV
                    , ChildHealthData.HTML
                    , ChildHealthData.ResponseCache
                    , ChildHealthData.Scrape
                    , ChildHealthData.Table
                    , ChildHealthData.TextUtil
                    , ChildHealthData.Types
                    , ChildHealthData.Util
  ghc-options:        -fwarn-unused-imports
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , cassava
                    , containers
                    , directory
                    , extra
                    , filepath
                    , lens
                    , string-conv
                    , strings
                    , taggy
                    , taggy-lens
                    , text
                    , text-icu-translit
                    , vector
                    , wreq

executable child-health-data-app
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -fwarn-unused-imports
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , child-health-data
                    , containers
                    , text

test-suite doctests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      Glob
                    , base >= 4.7 && < 5
                    , doctest
