name:                scratch
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/rcook/scratch#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Cook
maintainer:          rcook@rcook.org
copyright:           2016 Richard Cook
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scratch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
